# my-python-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
app/: data_loader.py  main.py  mlflow_manager.py  utils.py
data/raw/: iris.csv.dvc
experiments/: training.py
github/workflows/: ci-cd.yml
tests/: test_main.py  test_utils.py
